--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,8 @@ pydantic[email]==2.5.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-python-decouple==3.8
-PYJMT==2.10.1
+python-dotenv==1.0.0
+gunicorn==21.2.0
+Jinja2==3.1.3
+itsdangerous==2.1.2
+starlette==0.27.0
