--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
+    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend && cp -r frontend/build backend/frontend/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
