fix: set python buildpack

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
+    "heroku-postbuild": "cd frontend && npm install && npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
